Update library to support net8 + update sample website

--- a/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/AuthenticationRequest.cshtml
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/AuthenticationRequest.cshtml
@@ -52,7 +52,7 @@
                     @Html.TextBoxFor(m => m.DocumentId, new { @class = "form-control" })
                 </div>
             </div>
-            <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">Toggle more options</button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="collapse" data-bs-target="#demo">Toggle more options</button>
             <div id="demo" class="collapse">
                 <div class="form-group row">
                     <div class="col-3">
