--- a/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/StatusResponse.cshtml
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/StatusResponse.cshtml
@@ -1,4 +1,4 @@
-@using BankId.Merchant.Library
+﻿@using BankId.Merchant.Library
 
 @model BankId.Merchant.Library.SampleWebsite.Models.StatusModel
 
@@ -25,7 +25,7 @@
                 @Html.TextBoxFor(m => m.TransactionId, new { @class = "form-control" })
             </div>
         </div>
-        <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">Toggle more options</button>
+        <button type="button" class="btn btn-danger" data-bs-toggle="collapse" data-bs-target="#demo">Toggle more options</button>
         <div id="demo" class="collapse">
             <div class="form-group">
                 <div class="col-xs-3">
