--- a/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/Directory.cshtml
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/Views/BankId/Directory.cshtml
@@ -15,7 +15,7 @@
                 @Html.TextBoxFor(m => m.DirectoryUrl, new { @class = "form-control" })
             </div>
         </div>
-        <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">Toggle more options</button>
+        <button type="button" class="btn btn-danger" data-bs-toggle="collapse" data-bs-target="#demo">Toggle more options</button>
         <div id="demo" class="collapse">
             <div class="form-group">
                 <div class="col-xs-3">
