--- a/DotNet/BankId.Merchant.Library.SampleWebsite/Views/Shared/_Layout.cshtml
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BankId Merchant Website - .NET Core</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
